mobile scrollbar fix

--- a/citibike/article-styles.css
+++ b/citibike/article-styles.css
@@ -89,3 +89,8 @@ img {
     font-style: italic;
     color: gray;
 }
+
+.responsive {
+    width: 100%;
+    height: auto;
+  }
